--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^3.12.1
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.5.1
+  http: ^0.13.3
+  percent_indicator: 4.2.2
 
 dev_dependencies:
   flutter_test:
